plugins {
    id 'java'
    id 'application'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.graalvm.buildtools.native' version '0.10.6'
}

group = 'santannaf.payments'
version = '0.0.1-SNAPSHOT'
description = 'tts'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

bootRun {
    jvmArgs '--enable-native-access=ALL-UNNAMED','-Dio.netty.noUnsafe=true', '-Dio.netty.tryUnsafe=false', '--sun-misc-unsafe-memory-access=allow'
}

application {
    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
}
